<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ushaswini.inclass03.MainActivity">

    <TextView
        android:text="@string/tv_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/tv_thread_count_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/tv_thread_count" />

    <TextView
        android:text="@string/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_thread_count"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:id="@+id/textView5" />

    <TextView
        android:text="@string/tv_thread_length_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_thread_length"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/tv_thread_count"
        android:layout_alignStart="@+id/tv_thread_count" />

    <TextView
        android:text="@string/tv_async_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_thread_length"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:id="@+id/textView7" />

    <TextView
        android:text="@string/tv_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:id="@+id/textView10" />

    <TextView
        android:text="@string/tv_async_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_async_count"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/tv_thread_length"
        android:layout_alignStart="@+id/tv_thread_length" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="9"
        android:layout_marginTop="13dp"
        android:id="@+id/seekBar_thread_count"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="16"
        android:layout_marginTop="13dp"
        android:id="@+id/seekBar_thread_length"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="9"
        android:layout_marginTop="16dp"
        android:id="@+id/seekBar_async_count"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_async_count"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/textView13" />

    <TextView
        android:text="@string/tv_async_length_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignRight="@+id/tv_async_count"
        android:layout_alignEnd="@+id/tv_async_count"
        android:id="@+id/tv_async_length" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="16"
        android:layout_below="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/seekBar_async_length" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView"
        android:text="@string/tv_for_thread_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_generate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_generate"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
